--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -33,6 +33,7 @@
     "com.unity.addressables": "1.21.17",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.5",
+    "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.18",
