--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -30,6 +30,7 @@
     "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
     "com.svermeulen.extenject": "https://github.com/Mathijs-Bakker/Extenject.git?path=UnityProject/Assets/Plugins/Zenject/Source",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.21.17",
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.cinemachine": "2.9.5",
